--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,14 @@ dependencies:
   provider: ^6.1.1
   mqtt_client: ^10.0.0
   fl_chart: ^0.64.0
-  hive: ^2.1.0
-  hive_flutter: ^1.1.0
   json_annotation: ^4.7.0
   logging: ^1.0.2
   vibration: ^3.1.3
+  intl: ^0.20.2
+  lucide_icons: ^0.255.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+ 
  
  
 
@@ -57,6 +60,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^1.1.3
+  build_runner: ^2.1.11
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
