--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   lucide_icons: ^0.255.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_local_notifications: ^19.1.0
+  lottie: ^2.7.0
+  
+
  
  
  
@@ -84,7 +88,15 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - lib/images/spine.png
-  #   - images/a_dot_ham.jpeg
+     - lib/images/bridge.jpg
+     - lib/images/cat_cow.jpg
+     - lib/images/childs_pose.jpg   
+     - lib/images/spinal_twist.jpg
+     - lib/images/superman.jpg   
+     - lib/images/sitting.json   
+
+       
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
